--- a/VSPipelineToGitHubProj/Pages/Contact.cshtml
+++ b/VSPipelineToGitHubProj/Pages/Contact.cshtml
@@ -7,7 +7,7 @@
 <h3>@Model.Message</h3>
 
 <address>
-    One Microsoft Way<br />
+    One Microssdfdfddfdoft Way<br />
     Redmond, WA 98052-6399<br />
     <abbr title="Phone">P:</abbr>
     425.555.0100
